fix: subscription-card stretched images

--- a/apps/web/src/app/core/components/feed/subscription-card/subscription-card.component.scss
+++ b/apps/web/src/app/core/components/feed/subscription-card/subscription-card.component.scss
@@ -43,6 +43,7 @@
       outline: 2px solid rgba(variables.$clr-dusty-gray, 0.2);
       outline-offset: 2px;
       margin: 2px;
+      aspect-ratio: 1;
     }
   }
 
